<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@android:color/background_dark">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:verticalSpacing="10px"
		android:layout_marginBottom="2px" android:background="@android:color/background_light">
		<TextView android:id="@+id/name_value" android:layout_width="wrap_content"
			android:textStyle="bold" android:layout_height="wrap_content"
			android:layout_marginLeft="5px" android:text="" />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Price"
			android:layout_marginLeft="5px" android:gravity="left"
			android:layout_weight="0.5" />

		<TextView android:id="@+id/last_price" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="" android:gravity="right"
			android:layout_marginRight="10px" android:layout_weight="0.5" />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">

		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/Open" />
		<TextView android:id="@+id/open" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">
		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/High" />
		<TextView android:id="@+id/high" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">
		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/Low" />
		<TextView android:id="@+id/low" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">
		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/Change" />
		<TextView android:id="@+id/change" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">
		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/PE" />
		<TextView android:id="@+id/pe" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">
		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/EPS" />
		<TextView android:id="@+id/eps" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">
		<TextView android:layout_width="wrap_content"
			android:gravity="left" android:layout_weight="0.5"
			android:layout_marginLeft="5px" android:layout_height="wrap_content"
			android:text="@string/MaketValue" />
		<TextView android:id="@+id/mv" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginRight="10px" android:text="" android:gravity="right" />

	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="1px"
		android:background="@drawable/lighter_gray">

		<TextView android:id="@+id/time" android:layout_width="wrap_content"
			android:layout_weight="0.5" android:layout_height="wrap_content"
			android:layout_marginLeft="5px" android:layout_marginRight="10px"
			android:text="" android:gravity="right" />

	</LinearLayout>

</LinearLayout>	